fixed jump on Chicken

--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body {
     flex-direction: column;
     background-image: url('img/5_background/desert-bg.png');
     background-position: center;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     /* max-width: 100vw; */
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
     font-family: 'zabars', Arial, Helvetica, sans-serif;
     background-size: cover;
 }
@@ -58,9 +58,22 @@ h2 {
 
 canvas {
     background-color: black;
+    display: block;
 }
 
 @font-face {
     font-family: 'zabars';
     src: url('fonts/zabars.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }  
+
+@media only screen and (max-width: 720px) {
+    canvas {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    canvas {
+        height: 100vh;
+    }
+}
